// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataItem renders with all props set 1`] = `
<div
  data-test-id="data-result-item"
>
  <ResultItem
    leftActions={
      <React.Fragment>
        <UrlsAction
          icon={<LinkOutlined />}
          text="links"
          trackerEventId="Literature file"
          urls={
            Immutable.List [
              Immutable.Map {
                "value": "http://url.com",
              },
            ]
          }
        />
        <DOILinkAction
          dois={
            Immutable.List [
              Immutable.Map {
                "source": "in ad et",
                "value": "10.8756/tTM",
                "material": "data",
              },
            ]
          }
        />
      </React.Fragment>
    }
    rightActions={
      <IncomingLiteratureReferencesLinkAction
        eventCategory="Data search"
        itemCount={0}
        linkQuery="data.record.$ref:1234"
        referenceType="paper"
        trackerEventId="Papers link"
      />
    }
  >
    <div
      data-test-id="data-result-item-inner"
    >
      <div
        className="flex flex-nowrap"
      >
        <div
          className="flex-grow-1"
        >
          <Link
            className="result-item-title"
            data-test-id="data-result-title-link"
            to="/data/1234"
          >
            <LiteratureTitle
              title={
                Immutable.Map {
                  "source": "pariatur adipisicing amet",
                  "subtitle": "voluptate eiusmod fugiat",
                  "title": "Test title",
                }
              }
            />
          </Link>
        </div>
      </div>
      <div
        className="mt1"
      >
        <AuthorsAndCollaborations
          authorCount={1}
          authors={
            Immutable.List [
              Immutable.Map {
                "affiliations": Immutable.List [
                  Immutable.Map {
                    "curated_relation": true,
                    "record": Immutable.Map {
                      "$ref": "http://M1/api/institutions/12346",
                    },
                    "value": "ut",
                  },
                ],
              },
            ]
          }
          collaborations={Immutable.List []}
          collaborationsWithSuffix={Immutable.List []}
          enableAuthorsShowAll={false}
        />
      </div>
    </div>
  </ResultItem>
</div>
`;

exports[`DataItem renders with only needed props 1`] = `
<div
  data-test-id="data-result-item"
>
  <ResultItem
    leftActions={<React.Fragment />}
    rightActions={
      <IncomingLiteratureReferencesLinkAction
        eventCategory="Data search"
        itemCount={0}
        linkQuery="data.record.$ref:1234"
        referenceType="paper"
        trackerEventId="Papers link"
      />
    }
  >
    <div
      data-test-id="data-result-item-inner"
    >
      <div
        className="flex flex-nowrap"
      >
        <div
          className="flex-grow-1"
        >
          <Link
            className="result-item-title"
            data-test-id="data-result-title-link"
            to="/data/1234"
          >
            <LiteratureTitle
              title={
                Immutable.Map {
                  "source": "pariatur adipisicing amet",
                  "subtitle": "voluptate eiusmod fugiat",
                  "title": "Test title",
                }
              }
            />
          </Link>
        </div>
      </div>
      <div
        className="mt1"
      >
        <AuthorsAndCollaborations
          authorCount={0}
          authors={Immutable.List []}
          collaborations={Immutable.List []}
          collaborationsWithSuffix={Immutable.List []}
          enableAuthorsShowAll={false}
        />
      </div>
    </div>
  </ResultItem>
</div>
`;
